# project-maia

./: .env.production  .gitignore  APRESENTACAO_DIREITO.md  DESKTOP.md  GUIA_INSTALACAO.md  GUIA_WINDOWS.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  generate_secrets.py  iniciar.bat  parar.bat  render.yaml  start.sh
.github/workflows/: maia-release.yml
client/: .dockerignore  .env.production  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/public/: manifest.json  sw.js
client/src/: App.test.tsx  App.tsx  index.css  main.tsx
dlp-proxy/: Cargo.toml  Dockerfile
dlp-proxy/services/file-masker/: Dockerfile  main.py  requirements.txt
dlp-proxy/src/: main.rs
dlp-proxy/src/engine/: files.rs  mod.rs  text.rs
dlp-proxy/src/proxy/: mod.rs
dlp-proxy/src/wazuh/: mod.rs
knowledge-base/: vetta_vault_specs.md
server/: .dockerignore  Dockerfile  config.py  database.py  main.py  requirements.txt
server/middleware/: __init__.py  auth.py  rate_limiter.py
server/models/: caso.py  chat.py  cliente.py  document.py  peca.py  prazo.py  template.py  user.py
server/routers/: audit.py  auth.py  casos.py  chat.py  clientes.py  dashboard.py  documents.py  health.py  jurisprudencia.py  pecas.py  prazos.py  protocol.py  setup.py  templates.py  websockets.py  workspaces.py
server/rust_core/: Cargo.toml
server/rust_core/vetta_sign_bridge/: Cargo.toml
server/rust_core/vetta_sign_bridge/src/: lib.rs
server/scripts/: installer_build.py  locustfile.py  seed_legal_base.py  test_hallucination.py
server/services/: audit_service.py  auth_service.py  caso_service.py  chat_service.py  cliente_service.py  document_service.py  peca_service.py  prazo_service.py  saas_service.py  template_service.py
server/tests/: mock_deadline.py  test_auth.py  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+80 files in other folders)
