[package]
name = "vetta-shield"
version = "0.1.0"
edition = "2021"
description = "DLP Proxy Server for LLMs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rcgen = "0.12"
regex = "1.10"
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rustls = "0.22"
rustls-pemfile = "2.1"
tokio-rustls = "0.25"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.8", features = ["v4"] }
